@@ -1,4 +1,6 @@
 ver 0.25 (not yet released)
+* protocol
+  - implement "window" parameter for command "list"
 
 ver 0.24.2 (not yet released)
 * input
